--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="./ajrabegam.jpeg" target="_blank" class="download-button">Download CV</a>
+            <a href="./ajrabegam.jpg" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
     </section>
 
     <footer>
-        <p>&copy; 2023 VIGNESH M</p>
+        <p>&copy; 2023 AJRA BEGAM S</p>
     </footer>
 
     <script>
