--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="AJRABEGAM.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="AJRABEGAM.JPG" alt="Your Profile Picture" class="profile-picture">
             <h1>AJRA BEGAM S</h1>
             <p>Mastertrainer Edunet Foundation</p>
         </div>
@@ -157,7 +157,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="AJRABEGAM.jpg" target="_blank" class="download-button">Download CV</a>
+            <a href="AJRABEGAM.JPG" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
